# rag-udemy

./: pyproject.toml  requirements.txt
langchain_foundations/: core_concepts.py  main.py  output_parsers_demo.py  output_parsers_final.py  prompt_messages.py  prompt_templates_all.py  smart_bot_section1.py  working_with_llms.py
