[project]
name = "rag-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "docx2txt>=0.9",
    "faiss-cpu>=1.13.2",
    "gradio>=6.9.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-openai>=1.1.11",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.8.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "unstructured[docx]>=0.21.5",
]
